# mandelbulb-4d

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt  hello.cl  main.cpp
src/mb4d_gui/: app_state.cpp  app_state.hpp  color.cpp  color.hpp  distance_estimators.cpp  distance_estimators.hpp  draw_mandel_wnd.cpp  draw_mandel_wnd.hpp  drawing.cpp  drawing.hpp  drawing2.cpp  drawing2.hpp  generate_fractal.cpp  generate_fractal.hpp  main.cpp  mandelbulb.cpp  mandelbulb.hpp  mcamera.cpp  mcamera.hpp  parallel.cpp  parallel.hpp  test64bit.cpp  test64bit.hpp  test_cpp_with_header.cpp  test_one_wnd.cpp  test_opencl.cpp  test_opencl.hpp  test_two_wnd.cpp  test_two_wnd.hpp  threads_test.cpp  threads_test.hpp  utils.cpp  utils.hpp  vec3_math.cpp  vec3_math.hpp  work_queue.cpp  work_queue.hpp  work_queue_item.cpp  work_queue_item.hpp
src/mb4d_gui/de_params/: simple_mandelbulb_de_params.cpp  simple_mandelbulb_de_params.hpp
src/simple_window/: common_nuklear_includes.hpp  draw_mandel_wnd.cpp  draw_mandel_wnd.hpp  drawing.cpp  drawing.hpp  drawing2.cpp  drawing2.hpp  main.cpp  mandelbulb.cpp  mandelbulb.hpp  simple_window  test64bit.cpp  test64bit.hpp  test_cpp_with_header.cpp  test_cpp_with_header.hpp  test_one_wnd.cpp  test_one_wnd.hpp  test_opencl.cpp  test_two_wnd.cpp  threads_test.cpp
src2/: CMakeLists.txt
src2/simple_window/: drawing.cpp  main.cpp  main.cpp~  mandelbulb.cpp  simple_window  test64bit.cpp  test_opencl.cpp  threads_test.cpp
